test/fail_compilation/fail336.d
// 3476

struct S {
    int a;
    this(int) {}
}

S s = { 1 };


